--- a/roles/php/fpm/tasks/main.yml
+++ b/roles/php/fpm/tasks/main.yml
@@ -40,7 +40,7 @@
     src=/etc/php.ini
     dest=/etc/php/5.6/fpm/php.ini
     state=link
-  when: (ansible_os_family == "Debian") and (php_result|changed)
+  when: (ansible_os_family == "Debian") and (php_result is changed)
   tags:
     - php
 
